--- a/whoami/03-ingressroute.yaml
+++ b/whoami/03-ingressroute.yaml
@@ -3,7 +3,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: whoami
-  namespace: whoami
+  namespace: app
 spec:
   entryPoints:
     - websecure
